--- a/src/front-end/SCSS/__users.scss
+++ b/src/front-end/SCSS/__users.scss
@@ -1,7 +1,7 @@
 @import './variables';
 @import './config';
 
-section#Users {
+div.All__containers__for__users {
     width: 100%;
     height: auto;
     background-color: map-get($map: $main-color, $key: backgroundColor2);
