--- a/src/front-end/SCSS/__about.scss
+++ b/src/front-end/SCSS/__about.scss
@@ -6,15 +6,18 @@
 div.All__containers__for__aboutMe {
     width: 100%;
     height: 600px;
-    background-image: url('../../Image/banner-photo.jpg');
+    background-image: -webkit-image-set( url('../../Image/banner-1440-photo.jpg') 1x , url('../../Image/banner-768-photo.jpg') 2x);
     background-size: cover;
     z-index: -1;
+    position: relative;
 
     @include mobil {
         & {
             width: 100%;
             height: 400px;
+            background-image: url('../../Image/banner-375-photo(1).jpg');
             background-size: cover;
+            background-repeat: no-repeat;
         }
     }
 
@@ -22,14 +25,19 @@ div.All__containers__for__aboutMe {
     .container__about__me {
         width: 550px;
         z-index: 1;
-        padding-top: 116px;
-        margin-left: 31px;
+        position: absolute;
+        top: 22%;
+        left: 3%;
+
+        @include desktop {
+            top: 22%;
+            left: 3%;
+        }
 
         @include mobil {
             & {
                 width: 100%;
-                margin: 0 5px;
-                padding-top: 90px
+                left: 0%;
             }
         }
 
