--- a/src/front-end/SCSS/__relationship.scss
+++ b/src/front-end/SCSS/__relationship.scss
@@ -8,7 +8,7 @@ div.all__Containers__for__relationships{
 
     @include tablet{
         width: 100%;
-        height: 600px;
+        height: 700px;
     }
 
     
@@ -53,6 +53,7 @@ div.all__Containers__for__relationships{
             display: grid;
             margin: auto;
             grid-template-columns: 1fr 1fr;
+            gap: 0 15px;
             
             .image__svg__container{
                 text-align: center;
@@ -63,9 +64,14 @@ div.all__Containers__for__relationships{
                     width: 100%;
                     height: 285px;
                     display: grid;
+                    gap: 0 15px;
                     grid-template-columns: 1fr 1fr;
-                    margin: auto;
-                   
+                    .image__svg__container{
+                        img{
+                            width: auto;
+                            height: auto;
+                        }
+                    }
                    
                 }
             }
@@ -99,8 +105,12 @@ div.all__Containers__for__relationships{
             
             .relationship__requirement__containers {
                 width: 470px;
+                @include desktop{
+                width: 100%;
+                }
+
                 @include tablet{
-                    width: 450px;
+                    width: 100%;
                 }
 
                 @include mobil{
@@ -124,6 +134,10 @@ div.all__Containers__for__relationships{
                         margin-bottom: 36px;
                         @include paragraph;
                         color: black;
+
+                        @include desktop{
+                            width: 100%;
+                        }
 
                         @include mobil {
                             margin-bottom: 34px;
