--- a/src/front-end/SCSS/__users.scss
+++ b/src/front-end/SCSS/__users.scss
@@ -53,7 +53,8 @@ div.All__containers__for__users {
         margin: 0 80px;
 
         @include tablet {
-            margin: 0 30px;
+            margin: 0;
+            width: 100%;
         }
 
         @include mobil {
@@ -95,7 +96,7 @@ div.All__containers__for__users {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             text-align: center;
-            gap: 10px;
+            width: 100%;
 
             @include mobil {
                 display: flex;
@@ -107,6 +108,7 @@ div.All__containers__for__users {
             }
 
             .__user__content {
+                width: 100%;
                 height: 380px;
 
                 @include mobil {
